Restructured endpoints + Removed unnecessary code
