# src/controllers/userController.ts
@@ -3,8 +3,6 @@ import { SUCCESS } from '../constants/responseConstants';
 import errorHandler from '../utils/asyncErrorHandler';
 import prisma from '../db';
 import APIError from '../classes/APIError';
-import { Role } from '@prisma/client';
-import { JsonValue } from '@prisma/client/runtime/library';
 import { getUserService } from '../services/userService';
 
 const getUser = errorHandler(async(req: Request, res: Response, next: NextFunction) => {
@@ -51,59 +49,8 @@ const updateAuthenticatedUser = errorHandler(async(req: Request, res: Response, 
   });
 });
 
-const getUserSkills = errorHandler(async(req: Request, res: Response, next: NextFunction) => {
-  const { id } = req.params;
-  const user = await prisma.users.findFirst({
-    where: {
-      id,
-    },
-    omit: {
-      password: true,
-    },
-  });
-  if (!user){
-    return next(new APIError(404, 'User not found'));
-  }
-  res.status(200).json({
-    status: SUCCESS,
-    skills: user.skills,
-  });
-});
-
-const updateUserSkills = errorHandler(async(req: Request, res: Response, next: NextFunction) => {
-  const { skills } = req.body;
-  const { id } = req.params;
-  const { user: requestUser } = req;
-  const userSkills = (await prisma.users.findFirst({
-    where: {
-      id,
-    },
-    select: {
-      skills: true,
-    },
-  }))?.skills as Array<JsonValue>;
-  Array.from(skills).forEach((skill: any) => {
-    if (skill.add === true && !userSkills.includes(skill.name)){
-      userSkills.push(skill.name);
-    }
-    if (skill.add === false && userSkills.includes(skill.name)){
-      const index = userSkills.indexOf(skill.name);
-      userSkills.splice(index, 1);
-    }
-  });
-  if (requestUser.id !== id && requestUser.role !== Role.ADMIN){
-    return next(new APIError(403, 'You are not allowed to preform this action'));
-  }
-  res.status(200).json({
-    status: SUCCESS,
-    skills: userSkills,
-  });
-});
-
 export {
   getUser,
   getAuthenticatedUser,
   updateAuthenticatedUser,
-  getUserSkills,
-  updateUserSkills,
 };
