# src/routes/v1/authRouter.ts
@@ -22,7 +22,6 @@ import {
 } from '../../validators/validate.auth';
 import { rateLimiter } from '../../utils/rateLimiter';
 import { authenticate } from '../../middlewares/authMiddlewares';
-import { getAuthenticatedUser } from '../../controllers/userController';
 
 const authRouter = Router();
 
@@ -30,13 +29,6 @@ authRouter.route('/login')
   .post(
     requestValidator({ bodySchema: loginSchema }),
     login,
-  )
-  .all(notAllowedMethod);
-
-authRouter.route('/me')
-  .get(
-    authenticate({ access: '*' }),
-    getAuthenticatedUser,
   )
   .all(notAllowedMethod);
 
