# src/routes/v1/userRouter.ts
@@ -2,44 +2,20 @@ import { Router } from 'express';
 import { notAllowedMethod } from '../../middlewares/notAllowedHandler';
 import {
   getUser,
-  updateAuthenticatedUser,
-  getUserSkills,
-  updateUserSkills,
 } from '../../controllers/userController';
 import { authenticate, authorizedRoles } from '../../middlewares/authMiddlewares';
-import { Role } from '@prisma/client';
 import requestValidator from '../../middlewares/requestValidator';
-import { updateUserSchema, updateUserSkillsSchema } from '../../validators/validate.user';
+import authenticatedUserRouter from './authenticatedUserRouter';
 
 const userRouter = Router();
 
-userRouter.route('/me')
-  .patch(
-    authenticate({ access: 'full' }),
-    requestValidator({ bodySchema: updateUserSchema }),
-    updateAuthenticatedUser,
-  )
-  .all(notAllowedMethod);
+userRouter.use('/me', authenticatedUserRouter);
 
 userRouter.route('/:id')
   .get(
     authenticate({ access: 'full' }),
     authorizedRoles('*'),
     getUser,
-  )
-  .all(notAllowedMethod);
-
-userRouter.route('/:id/skills')
-  .get(
-    authenticate({ access: 'full' }),
-    authorizedRoles('*'),
-    getUserSkills,
-  )
-  .put(
-    authenticate({ access: 'full' }),
-    authorizedRoles('*'),
-    requestValidator({ bodySchema: updateUserSkillsSchema }),
-    updateUserSkills,
   )
   .all(notAllowedMethod);
 
